Finish first draft of troubleshooting

--- a/docs/alkiln/setup.mdx
+++ b/docs/alkiln/setup.mdx
@@ -415,10 +415,15 @@ For everyone:
 
 For some people:
 
-- At this time, <KittyLitter/> tests are unable to handle data stored externally. For example, data stored in an S3 bucket.<!--  If you still want this type of test, it is more work. You are welcome to use [our GitHub action code](https://github.com/SuffolkLITLab/ALKiln/blob/-/action_for_github_server/action.yml) as a starting point, of course, to write your own GitHub action to create a server on GitHub with the right Docker build environment variables, S3 credentials, and config details from your dev server. -->
+- At this time, <KittyLitter/> tests are unable to handle data stored externally. For example, data stored in an S3 bucket.[^ways] <!--  If you still want this type of test, it is more work. You are welcome to use [our GitHub action code](https://github.com/SuffolkLITLab/ALKiln/blob/-/action_for_github_server/action.yml) as a starting point, of course, to write your own GitHub action to create a server on GitHub with the right Docker build environment variables, S3 credentials, and config details from your dev server. -->
 - You **must** make sure you have properly required all your "Dependencies" on your Packages page. That is the only way the isolated/sandboxed[^sand] server can know to download them.
 - All your package's dependencies **must** be published on pypi. That is the only place that the sandboxed server can get them.
-<!-- - TODO: Package size because of `dainstall`? These are installed differently - on the actual server instead of in a Playground - so maybe they have that limitation -->
+- If your package is too big, you will be unable to use this type of test. <KittyLitter/> tests install your package on the server itself so that your package's dependencies get automatically installed too. The method ALKiln needs to use to install your package on the server will reject big packages. We are unsure about the exact limits, but we know it must be less than 30 MB.
+
+<!-- - TODO: Check on package size limitation. -->
+
+
+[^ways]: If you need to use external data and still want <KittyLitter/> tests, it is probably possible. It is a feature we are hoping to add, but it is currently low on the list. If you do try to do this, we would love to help and to learn from what you do. You are welcome to use [our GitHub action code](https://github.com/SuffolkLITLab/ALKiln/blob/-/action_for_github_server/action.yml) as a starting point, of course, to write your own GitHub action to create a server on GitHub with the [right Docker build environment variables, credentials, and config details](https://docassemble.org/docs/docker.html#data%20storage).
 
 
 ## Disabling {#disable}
