--- a/docs/alkiln/writing_tests.mdx
+++ b/docs/alkiln/writing_tests.mdx
@@ -1688,7 +1688,7 @@ Use these inputs in the same way and in the same places as the required inputs. 
 You can add some optional inputs to the workflow file of any <KittyLitter/> tests to control global ALKiln configuration values. We note when an option should also be a GitHub secret for security reasons:
 
 - `CONFIG_CONTENTS` is the contents of the [docassemble config file](https://docassemble.org/docs/config.html) for the new docassemble server GitHub will create. **For security, we strongly recommend you put this information into a GitHub secret** like `DOCASSEMBLE_DEVELOPER_API_KEY` above. If you have special configuration settings on your own server, you can use input to include them and make this new fresh server more like your production server. The default is the default config that docassemble itself uses.
-- `SHOW_DOCKER_OUTPUT` you can give this the values "true" or "false". When you set it to "true", you will see more output when ALKiln creates the docker container and installs docassemble there. The output will be visible to anyone that can see the action running, like GitHub admins or collaborators. By default, it is "false". This is because our team is unsure about what information it might include, so we are unsure if it will show sensitive configuration information, like tokens and API keys.
+- `SHOW_DOCKER_OUTPUT` you can give this the values "true" or "false". When you set it to "true", you will see more output when ALKiln creates the docker container and installs docassemble there. The output will be visible to anyone that can see the action running, like GitHub admins or collaborators. By default, it is "false". This is because our team is unsure about what information those logs might include, so we are unsure if it will show sensitive configuration information, like tokens and API keys.
 - `MAX_SECONDS_FOR_DOCKER` is the maximum amount of time to give the docassemble docker container to get properly started. If your tests keep failing because your docker container is taking a long time to start, maybe because of configuration options, then you can increase this time. The default time is 600 seconds (10 min).
 
 <!-- TODO: What is the error message when docker container setup stops too early? -->
@@ -2189,7 +2189,9 @@ In GitHub and with <AutoDIY/> tests, you will see the [results](#results).
 
 **This is for:** all tests that run on GitHub.
 
-All tests that fail will get run a second time. These retries can make tests take longer, but it can also help with flaky failing tests caused by [server reloads](troubleshooting.mdx#slow).
+All tests that fail will get run a second time. These retries can make tests take longer, but they can also help with [flaky failing tests](troubleshooting.mdx#flake) caused by [server reloads](troubleshooting.mdx#slow).
+
+Currently, there is no way to choose whether to re-run tests or not.
 
 
 ## Test results overview {#results}
